fix navigation mobile icon

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -155,7 +155,7 @@
 }
 
   .navbar-toggle {
-    margin: 15px;
+    margin: 14px;
     padding: 0;
   }
 
